# MCP-Server-Learning

./: .gitignore  README.md  client.py  pyproject.toml
docs/: requirements.txt
server/: weather.py
